Update social links (LinkedIn & Instagram)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,17 @@
     <!-- Google Fonts: Playfair Display for headers, Inter for body -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <!-- FontAwesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
     <header class="navbar">
-        <div class="logo">MBM.</div>
+        <div class="logo">Portfolio</div>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -33,8 +37,10 @@
                 <h1 class="name">Muhammad Bilal Mirza.</h1>
                 <h2 class="tagline">I build secure, scalable digital solutions.</h2>
                 <p class="desc">
-                    A Computer Science student specializing in <span>Web Development</span>, <span>Enterprise Systems (SAP)</span>, and <span>Blockchain</span>.
-                    Currently crafting decentralized applications and optimizing enterprise workflows.
+                    A Computer Science student specializing in <span>Web Development</span>, <span>Enterprise Systems
+                        (SAP)</span>, and <span>Blockchain</span>.
+                    Currently working on Final Year Project Building an intelligent web platform integrating machine
+                    learning models with full-stack web development.
                 </p>
                 <div class="cta-group">
                     <a href="#projects" class="btn-primary">View My Work</a>
@@ -48,12 +54,15 @@
             <div class="about-grid">
                 <div class="about-text">
                     <p>
-                        I am a driven scholar and developer based in Rawalpindi, Pakistan. My academic journey combines rigorous study of 
-                        Computer Science fundamentals—like OOP and Data Structures—with practical exploration of emerging technologies.
+                        I am a driven scholar and developer based in Rawalpindi, Pakistan. My academic journey combines
+                        rigorous study of
+                        Computer Science fundamentals—like OOP and Data Structures—with practical exploration of
+                        emerging technologies.
                     </p>
                     <p>
-                        My professional experience at <strong>Fauji Fertilizer Company (FFC)</strong> gave me deep insights into 
-                        enterprise-scale systems (SAP/ABAP), while my research focuses on the intersection of security and blockchain.
+                        My professional experience at <strong>Fauji Fertilizer Company (FFC)</strong> gave me deep
+                        insights into
+                        enterprise-scale systems (SAP/ABAP)
                     </p>
                     <p>Here are a few technologies I've been working with recently:</p>
                     <ul class="skills-list">
@@ -62,13 +71,14 @@
                         <li>Node.js</li>
                         <li>ABAP (SAP)</li>
                         <li>Python</li>
+                        <li>C++</li>
+                        <li>JavaScript</li>
                         <li>Hyperledger Fabric</li>
                     </ul>
                 </div>
                 <div class="about-img">
                     <div class="img-wrapper">
-                        <!-- Placeholder for profile image -->
-                        <div class="img-placeholder">MBM</div>
+                        <img src="profile.png" alt="Muhammad Bilal Mirza" class="profile-img">
                     </div>
                 </div>
             </div>
@@ -83,9 +93,13 @@
                         <span class="range">SAP ERP Division</span>
                     </div>
                     <ul class="job-desc">
-                        <li>Specialized in <strong>ABAP Programming</strong>, developing custom reports and enhancements for enterprise modules.</li>
-                        <li>Gained hands-on expertise in critical business modules including <strong>MM (Materials Management)</strong>, <strong>QM (Quality Management)</strong>, <strong>HCM</strong>, and <strong>FI</strong>.</li>
-                        <li>Collaborated with senior consultants to optimize internal data workflows and system reliability.</li>
+                        <li>Specialized in <strong>ABAP Programming</strong>, developing custom reports and enhancements
+                            for enterprise modules.</li>
+                        <li>Gained hands-on expertise in critical business modules including <strong>MM (Materials
+                                Management)</strong>, <strong>QM (Quality Management)</strong>, <strong>HCM</strong>,
+                            and <strong>FI</strong>.</li>
+                        <li>Collaborated with senior consultants to optimize internal data workflows and system
+                            reliability.</li>
                     </ul>
                 </div>
             </div>
@@ -98,10 +112,13 @@
                 <article class="project-card">
                     <div class="project-content">
                         <div class="project-overline">Blockchain Project</div>
-                        <h3 class="project-title"><a href="https://github.com/Mirza1358/academic-credentials-fabric">Academic Credentials Fabric</a></h3>
+                        <h3 class="project-title"><a
+                                href="https://github.com/Mirza1358/academic-credentials-fabric">Academic Credentials
+                                Fabric</a></h3>
                         <div class="project-desc">
                             <p>
-                                A decentralized application (dApp) built on <strong>Hyperledger Fabric</strong> for issuing, verifying, and revoking academic degrees. 
+                                A decentralized application (dApp) built on <strong>Hyperledger Fabric</strong> for
+                                issuing, verifying, and revoking academic degrees.
                                 Ensures tamper-proof records and instant verification for employers.
                             </p>
                         </div>
@@ -109,11 +126,13 @@
                             <li>Hyperledger Fabric</li>
                             <li>Node.js Chaincode</li>
                             <li>Express API</li>
-                            <li>Docker</li>
+
                         </ul>
                         <div class="project-links">
-                            <a href="https://github.com/Mirza1358/academic-credentials-fabric"><i class="fab fa-github"></i></a>
-                            <a href="https://mirza1358.github.io/academic-credentials-fabric/"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Mirza1358/academic-credentials-fabric"><i
+                                    class="fab fa-github"></i></a>
+                            <a href="https://mirza1358.github.io/academic-credentials-fabric/"><i
+                                    class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                 </article>
@@ -122,10 +141,12 @@
                 <article class="project-card">
                     <div class="project-content">
                         <div class="project-overline">Web Application</div>
-                        <h3 class="project-title"><a href="#">Cinepex Management</a></h3>
+                        <h3 class="project-title"><a href="https://github.com/Mirza1358/cinepex">Cinepex Management</a>
+                        </h3>
                         <div class="project-desc">
                             <p>
-                                A comprehensive cinema management solution featuring real-time ticket booking, movie scheduling, and customer data management.
+                                A comprehensive cinema management solution featuring real-time ticket booking, movie
+                                scheduling, and customer data management.
                                 Demonstrates strong OOP principles and database design.
                             </p>
                         </div>
@@ -135,7 +156,7 @@
                             <li>OOP</li>
                         </ul>
                         <div class="project-links">
-                            <a href="#"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/Mirza1358/cinepex"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </article>
@@ -146,17 +167,18 @@
             <h2 class="section-title"><span>04.</span> What's Next?</h2>
             <h1 class="title">Get In Touch</h1>
             <p>
-                I am currently open to opportunities in Web Development and Blockchain research. 
+                I am currently open to opportunities in Web development, Data science/analytics, and ERP system design &
+                integration .
                 Whether you have a question or just want to say hi, I'll try my best to get back to you!
             </p>
-            <a href="mailto:official.bilalmirza@gmail.com" class="btn-primary">Say Hello</a>
+            <a href="bilal.mirza0987@gmail.com" class="btn-primary">Say Hello</a>
         </section>
     </main>
 
     <footer>
         <div class="social-links">
             <a href="https://github.com/Mirza1358"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="www.linkedin.com/in/bilal-mirza-8b5660364"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
         </div>
         <p>Designed & Built by Muhammad Bilal Mirza</p>
@@ -164,4 +186,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
