Fix LinkedIn protocol and add Instagram

--- a/index.html
+++ b/index.html
@@ -178,8 +178,9 @@
     <footer>
         <div class="social-links">
             <a href="https://github.com/Mirza1358"><i class="fab fa-github"></i></a>
-            <a href="www.linkedin.com/in/bilal-mirza-8b5660364"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/bilal-mirza-8b5660364"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/mirzaa14.__?igsh=d2tqb2FrZm00aWcx&utm_source=qr"><i
+                    class="fab fa-instagram"></i></a>
         </div>
         <p>Designed & Built by Muhammad Bilal Mirza</p>
     </footer>
