Sync user updates and verify Cinepex link

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 integration .
                 Whether you have a question or just want to say hi, I'll try my best to get back to you!
             </p>
-            <a href="bilal.mirza0987@gmail.com" class="btn-primary">Say Hello</a>
+            <a href="mailto:bilal.mirza0987@gmail.com" class="btn-primary">Say Hello</a>
         </section>
     </main>
 
