Update Cinepex URL to live demo

--- a/index.html
+++ b/index.html
@@ -141,11 +141,12 @@
                 <article class="project-card">
                     <div class="project-content">
                         <div class="project-overline">Web Application</div>
-                        <h3 class="project-title"><a href="https://github.com/Mirza1358/cinepex">Cinepex Management</a>
+                        <h3 class="project-title"><a href="https://mirza1358.github.io/cinepax-booking-system/">Cinepex
+                                Management</a>
                         </h3>
                         <div class="project-desc">
                             <p>
-                                A comprehensive cinema management solution featuring real-time ticket booking, movie
+                                A basic cinema management solution featuring real-time ticket booking, movie
                                 scheduling, and customer data management.
                                 Demonstrates strong OOP principles and database design.
                             </p>
