Add external link icon for Cinepex

--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
                             <li>OOP</li>
                         </ul>
                         <div class="project-links">
-                            <a href="https://github.com/Mirza1358/cinepex"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/Mirza1358/cinepex"><i class="fab fa-github"></i> </a>
+                            <a href="https://github.com/Mirza1358/cinepex"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                 </article>
