--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <article class="project-card">
                     <div class="project-content">
                         <div class="project-overline">Web Application</div>
-                        <h3 class="project-title"><a href="https://mirza1358.github.io/cinepax-booking-system/">Cinepex
+                        <h3 class="project-title"><a href="https://github.com/Mirza1358/cinepex">Cinepex
                                 Management</a>
                         </h3>
                         <div class="project-desc">
@@ -158,7 +158,8 @@
                         </ul>
                         <div class="project-links">
                             <a href="https://github.com/Mirza1358/cinepex"><i class="fab fa-github"></i> </a>
-                            <a href="https://github.com/Mirza1358/cinepex"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://mirza1358.github.io/cinepax-booking-system/"><i
+                                    class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                 </article>
