Add Thuraya Project to portfolio

--- a/index.html
+++ b/index.html
@@ -163,7 +163,35 @@
                                     class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
-                </article>
+                    <!-- Project 3 -->
+                    <article class="project-card">
+                        <div class="project-content">
+                            <div class="project-overline">Web Application</div>
+                            <h3 class="project-title"><a href="https://github.com/Mirza1358/thuraya-project">Thuraya
+                                    Project</a>
+                            </h3>
+                            <div class="project-desc">
+                                <p>
+                                    A comprehensive web application solution featuring real-time booking and data
+                                    management.
+                                    Demonstrates strong OOP principles and database design.
+                                </p>
+                            </div>
+                            <ul class="project-tech">
+                                <li>Web Development</li>
+                                <li>Database Design</li>
+                                <li>OOP</li>
+                            </ul>
+                            <div class="project-links">
+                                <a href="https://github.com/Mirza1358/thuraya-project"><i class="fab fa-github"></i>
+                                </a>
+                                <a href="https://mirza1358.github.io/thuraya-project/"><i
+                                        class="fas fa-external-link-alt"></i></a>
+                            </div>
+                        </div>
+                    </article>
+            </div>
+            </article>
             </div>
         </section>
 
