Fix project layout and reorder (Cinepex, Blockchain, Thuraya)

--- a/index.html
+++ b/index.html
@@ -108,36 +108,7 @@
         <section id="projects">
             <h2 class="section-title"><span>03.</span> Featured Projects</h2>
             <div class="projects-grid">
-                <!-- Project 1 -->
-                <article class="project-card">
-                    <div class="project-content">
-                        <div class="project-overline">Blockchain Project</div>
-                        <h3 class="project-title"><a
-                                href="https://github.com/Mirza1358/academic-credentials-fabric">Academic Credentials
-                                Fabric</a></h3>
-                        <div class="project-desc">
-                            <p>
-                                A decentralized application (dApp) built on <strong>Hyperledger Fabric</strong> for
-                                issuing, verifying, and revoking academic degrees.
-                                Ensures tamper-proof records and instant verification for employers.
-                            </p>
-                        </div>
-                        <ul class="project-tech">
-                            <li>Hyperledger Fabric</li>
-                            <li>Node.js Chaincode</li>
-                            <li>Express API</li>
-
-                        </ul>
-                        <div class="project-links">
-                            <a href="https://github.com/Mirza1358/academic-credentials-fabric"><i
-                                    class="fab fa-github"></i></a>
-                            <a href="https://mirza1358.github.io/academic-credentials-fabric/"><i
-                                    class="fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
-                </article>
-
-                <!-- Project 2 -->
+                <!-- Project 1: Cinepex -->
                 <article class="project-card">
                     <div class="project-content">
                         <div class="project-overline">Web Application</div>
@@ -163,35 +134,63 @@
                                     class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
-                    <!-- Project 3 -->
-                    <article class="project-card">
-                        <div class="project-content">
-                            <div class="project-overline">Web Application</div>
-                            <h3 class="project-title"><a href="https://github.com/Mirza1358/thuraya-project">Thuraya
-                                    Project</a>
-                            </h3>
-                            <div class="project-desc">
-                                <p>
-                                    A comprehensive web application solution featuring real-time booking and data
-                                    management.
-                                    Demonstrates strong OOP principles and database design.
-                                </p>
-                            </div>
-                            <ul class="project-tech">
-                                <li>Web Development</li>
-                                <li>Database Design</li>
-                                <li>OOP</li>
-                            </ul>
-                            <div class="project-links">
-                                <a href="https://github.com/Mirza1358/thuraya-project"><i class="fab fa-github"></i>
-                                </a>
-                                <a href="https://mirza1358.github.io/thuraya-project/"><i
-                                        class="fas fa-external-link-alt"></i></a>
-                            </div>
+                </article>
+
+                <!-- Project 2: Blockchain -->
+                <article class="project-card">
+                    <div class="project-content">
+                        <div class="project-overline">Blockchain Project</div>
+                        <h3 class="project-title"><a
+                                href="https://github.com/Mirza1358/academic-credentials-fabric">Academic Credentials
+                                Fabric</a></h3>
+                        <div class="project-desc">
+                            <p>
+                                A decentralized application (dApp) built on <strong>Hyperledger Fabric</strong> for
+                                issuing, verifying, and revoking academic degrees.
+                                Ensures tamper-proof records and instant verification for employers.
+                            </p>
                         </div>
-                    </article>
-            </div>
-            </article>
+                        <ul class="project-tech">
+                            <li>Hyperledger Fabric</li>
+                            <li>Node.js Chaincode</li>
+                            <li>Express API</li>
+                        </ul>
+                        <div class="project-links">
+                            <a href="https://github.com/Mirza1358/academic-credentials-fabric"><i
+                                    class="fab fa-github"></i></a>
+                            <a href="https://mirza1358.github.io/academic-credentials-fabric/"><i
+                                    class="fas fa-external-link-alt"></i></a>
+                        </div>
+                    </div>
+                </article>
+
+                <!-- Project 3: Thuraya -->
+                <article class="project-card">
+                    <div class="project-content">
+                        <div class="project-overline">Web Application</div>
+                        <h3 class="project-title"><a href="https://github.com/Mirza1358/thuraya-project">Thuraya
+                                Project</a>
+                        </h3>
+                        <div class="project-desc">
+                            <p>
+                                A comprehensive web application solution featuring real-time booking and data
+                                management.
+                                Demonstrates strong OOP principles and database design.
+                            </p>
+                        </div>
+                        <ul class="project-tech">
+                            <li>Web Development</li>
+                            <li>Database Design</li>
+                            <li>OOP</li>
+                        </ul>
+                        <div class="project-links">
+                            <a href="https://github.com/Mirza1358/thuraya-project"><i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://mirza1358.github.io/thuraya-project/"><i
+                                    class="fas fa-external-link-alt"></i></a>
+                        </div>
+                    </div>
+                </article>
             </div>
         </section>
 
